<resources>
    <string name="UtilitykeyNum">Utility Key %d</string>
    <string name="internalError">Internal Error</string>
    <string name="app_name">iParadoxM</string>
    <string name="iParadoxLite">iParadox Lite</string>
    <string name="iParadoxCopyright"> </string>
    <string name="Feedback">Feedback:</string>
    <string name="feedBackLink">-</string>
    <string name="Connect">Connect</string>
    <string name="DeleteSite">Delete Site</string>
    <string name="RememberPassword">Remember Password</string>
    <string name="Emptyslot">Click for new site</string>
    <string name="SiteNum">Site %d</string>
    <string name="Edit">Edit</string>
    <string name="Done">Done</string>
    <string name="NewSite">New Site</string>
    <string name="LocatingIpDevices">%d IP devices located so far</string>
    <string name="exit_press_back_twice_to_exit">Press Back button again to Exit</string>
    <string name="exit_press_back_twice_to_change_site">Press Back button again to Close Site</string>
    <string name="Searching">Searching...</string>
    <string name="NoactiveGPRS">No active GPRS or WiFi detected</string>
    <string name="activeGPRS">Network(s) detected</string>
    <string name="SystemInformation">System Information</string>
    <string name="PanelCOLON">Panel</string>
    <string name="TypeCOLON">Type:</string>
    <string name="SoftwareCOLON">Software:</string>
    <string name="SerialNumberCOLON">Serial Number:</string>
    <string name="IPModuleCOLON">IP Module</string>
    <string name="HardwareCOLON">Hardware:</string>
    <string name="ConnectionSettings">Connection Settings</string>
    <string name="LabelCOLON">Label:</string>
    <string name="AppInformation">App Information</string>
    <string name="System">System</string>
    <string name="Info">Info</string>
    <string name="Bypass">Bypass</string>
    <string name="PGM">PGM</string>
    <string name="About">About</string>
    <string name="UnsupportedmoduleCOLON">Unsupported module: The type of communication module (e.g. IP module) connected to your alarm system is not supported. Please speak to your installer for more information.</string>
    <string name="AlarmSystemDetectedCOLON">The application successfully detected your alarm system, but the IP module on site requires an upgrade (V5.03 or higher). Please contact your alarm installer.</string>
    <string name="InvalidIPpasswordCOLON">Invalid IP password: The connection has been aborted. Please touch Ok and enter a valid IP password on the Connection Settings screen.</string>
    <string name="UseralreadyconnectedCOLON">User already connected: The connection has been aborted. Another user is already connected to your alarm system.</string>
    <string name="ConnectionrefusedCOLON">Connection refused: Please touch Ok, and verify that the IP address, port and/or port forwarding information is correctly set.</string>
    <string name="PanelidentificationerrorCOLON">Panel identification error: The connection has been aborted, please touch Ok and try to reconnect.</string>
    <string name="InvalidusercodeCOLON">Invalid user code: The connection has been aborted. Please touch Ok and enter a valid user code (alarm system code).</string>
    <string name="PanelalreadyconnectedCOLON">Panel already connected: The connection has been aborted, please touch Ok and try to reconnect.</string>
    <string name="ConnectiohasbennabortedCOLON">The connection has been aborted. Another Paradox application is already connected to your alarm system.</string>
    <string name="UnknownresultcodeCOLON">Unknown result code: The connection has been aborted, please touch Ok and try to reconnect.</string>
    <string name="UnsupportedpanelCOLON">Unsupported panel: The alarm panel on your site is not supported. Please speak to your installer for more information.</string>
    <string name="Connectiontimeout">Connection timeout: There was no response from your alarm system. Please touch Ok and try to reconnect.</string>
    <string name="RequesttimeoutCOLON">Request timeout</string>
    <string name="DisconnectiontimeoutCOLON">Disconnection timeout: There was no response from your alarm system. Please touch Ok and try to reconnect.</string>
    <string name="ActiontimeoutCOLON">Action timeout: An action was sent, but the system could not answer. Please touch Ok and try again.</string>
    <string name="Notification">Notification</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="AllAreas">All Areas</string>
    <string name="AllZonesClosed">All Zones Closed</string>
    <string name="OneOpenZone">1 Open Zone</string>
    <string name="NumOpenZones">%d Open Zones</string>
    <string name="EnterUserCode">Enter User Code</string>
    <string name="ConnectionToCOLON">Connection to:</string>
    <string name="FunctionNotSupportedByPanelVersion">This function is not supported by your panel version.</string>
    <string name="YouCanUpgradeYourFirmware">You can upgrade your firmware to the latest version to support this function.</string>
    <string name="PleaseContactYourInstaller">Please contact your installer for more information.</string>
    <string name="Arm">Arm</string>
    <string name="Stay">Stay</string>
    <string name="Disarm">Disarm</string>
    <string name="Sleep">Sleep</string>
    <string name="Instant">Instant</string>
    <string name="Current">Current</string>
    <string name="EntryDelay">Entry Delay</string>
    <string name="ExitDelay">Exit Delay</string>
    <string name="Arming">Arming</string>
    <string name="InstantArming">Instant Arming</string>
    <string name="StayArming">Stay Arming</string>
    <string name="SleepArming">Sleep Arming</string>
    <string name="Systemwasinalarm">System was in alarm</string>
    <string name="InAlarm">In Alarm</string>
    <string name="inalarm">in alarm</string>
    <string name="WasinAlarm">Was in Alarm</string>
    <string name="wasinalarm">was in alarm</string>
    <string name="Open">Open</string>
    <string name="Closed">Closed</string>
    <string name="Bypassed">Bypassed</string>
    <string name="All">All</string>
    <string name="ThereAreNoCloseZones">There are no closed zones.</string>
    <string name="ThereAreNoOpenZones">There are no open zones.</string>
    <string name="ThereAreNoZones">Sorry, there are no zones currently available for this area.</string>
    <string name="LoadingWait">Loading...</string>
    <string name="XisinalarmX" formatted="false">%s is in alarm %s</string>
    <string name="XwasinalarmX">%1$s was in alarm %2$s</string>
    <string name="WouldyouliketoDisarmX">Would you like to Disarm %s?</string>
    <string name="WouldYouLikeToDisarm">Would you like to Disarm the system?</string>
    <string name="_audiblealarm_">(audible alarm)</string>
    <string name="_firealarm_">(fire alarm)</string>
    <string name="_panicalarm_">(panic alarm)</string>
    <string name="_silentalarm_">(silent alarm)</string>
    <string name="_unknownalarm_" />
    <string name="zoneTypes">Zone types</string>
    <string name="zoneStatusPair">%1$s%2$s</string>
    <string name="ZoneStatus">Zone Status</string>
    <string name="bypassedZonesCount">%1$s Bypassed Zones</string>
    <string name="NoResultMatchFilter">No zones found that match search criteria</string>
    <string name="pressForMenu">PRESS screen for menu</string>
    <string name="ClickForPrevious">TAP for previous screen</string>
    <string name="bypassedAll">%1$s (bypassed)</string>
    <string name="bypassedNone">%1$s (not bypassed)</string>
    <string name="bypassedPart">%1$s (partially bypassed)</string>
    <string name="bypassedNot">%1$s (cannot be bypassed)</string>
    <string name="BypassAllOpenZones">Bypass all open Zones</string>
    <string name="BypassZones">Bypass Zones</string>
    <string name="unbypassArea">Un-bypass Zones</string>
    <string name="clickToBypass">Click to Bypass</string>
    <string name="MySites">My Sites</string>
    <string name="wtSite">Site Configuration</string>
    <string name="LocateIPDevices">Locate IP devices</string>
    <string name="PGMControl">PGM Control</string>
    <string name="VibrateOnAlarm">Vibrate on Alarm</string>
    <string name="PlaySoundOnAlarm">Sound on Alarm</string>
    <string name="PGMNumCOLON">PGM%d:</string>
    <string name="OverridePGMTimer">The selected PGM is set to follow a timer. Manually activating the PGM will override the timer (remains ON). Do you wish to continue?</string>
    <string name="General">General</string>
    <string name="SiteLabelCOLON">Site Label:</string>
    <string name="IPPasswordCOLON">IP Password:</string>
    <string name="ConnectUsing">Connect Using:</string>
    <string name="DNS">DNS</string>
    <string name="SiteIDCOLON">Site ID:</string>
    <string name="StaticIP">Static IP</string>
    <string name="SMSCallback">SMS Callback</string>
    <string name="Locate">Locate</string>
    <string name="LocateIPDeviceOnNetwork">Locate your IP Device on a Local Network</string>
    <string name="IPAddress">IP Address:</string>
    <string name="IPPortCOLON">IPPort:</string>
    <string name="Language">Language</string>
    <string name="AlarmSystemLabel">Alarm System Label</string>
    <string name="AreaNum">Area 1</string>
    <string name="SiteIDNotRecognized">The DNS system does not recognize this Site ID, please touch Ok and verify that the Site ID name is correct.</string>
    <string name="DNSCannotBeContacted">The DNS system can not be contacted, please touch Ok and verify that you have access to the Internet.</string>
    <string name="Upgraderequired">Upgrade required</string>
    <string name="MySecuritySystem">My Security System</string>
    <string name="AlarminMemory">Alarm in Memory</string>
    <string name="Troubles">Troubles</string>
    <string name="None">None</string>
    <string name="Yes">Yes</string>
    <string name="SystemHasTroubles">Panel has some troubles</string>
    <string name="lowbattery">Low battery</string>
    <string name="Wirelesszonelowbattery">Wireless zone low battery</string>
    <string name="WirelessDevicesListedHaveLowBattery">The wireless devices listed have reported a low battery and their batteries need to be replaced.</string>
    <string name="Power">Power</string>
    <string name="Powertrouble">Power trouble</string>
    <string name="Controlpanelbatteryfailure">Control panel battery failure</string>
    <string name="ControlPanelBatteryDisconnected">"The control panel's backup battery is disconnected, needs to be recharged, or replaced."</string>
    <string name="ControlpanelACfailure">Control panel AC failure</string>
    <string name="PanelPowerFailure">"There is a power failure or the control panel's AC power source is disconnected."</string>
    <string name="Controlpanelauxiliaryoverload">Control panel auxiliary overload</string>
    <string name="PanelAuxiliaryPowerOverload">"The control panel's auxiliary power output is overloaded."</string>
    <string name="WirelesskeypadACfailure">Wireless keypad AC failure</string>
    <string name="WirelessKeypadPowerFailure">"There is a power failure or a wireless keypad's AC power source is disconnected."</string>
    <string name="Wirelesskeypadbatteryfailure">Wireless keypad battery failure</string>
    <string name="WirelessKeypadBatteryDisconnected">"A wireless keypad's backup battery is disconnected, needs to be recharged, or replaced."</string>
    <string name="WirelessrepeaterACfailure">Wireless repeater AC failure</string>
    <string name="WirelessRepeaterBatteryIsDisconnected">"A wireless repeater's backup battery is disconnected, needs to be recharged, or replaced."</string>
    <string name="WirelesssirenACfailure">Wireless siren AC failure</string>
    <string name="PhoneNo">Phone #:</string>
    <string name="SMSRetriesConnection">Retries:</string>
</resources>