<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@id/scrollView1"
    android:layout_width="260.0dip"
    android:layout_height="260.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ConnectionToCOLON" />
        <TextView
            android:textSize="17.0sp"
            android:textStyle="bold"
            android:id="@id/cnxTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@id/cnxTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@id/modulePWLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IPPasswordCOLON" />
            <EditText
                android:gravity="right"
                android:id="@id/modulePW"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:password="true"
                android:maxLength="12"
                android:inputType="textPassword">
                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterUserCode" />
            <EditText
                android:gravity="right"
                android:id="@id/panelPW"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:maxLength="6"
                android:digits="\ 0123456789"
                android:inputType="phone" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <CheckBox
                android:textSize="13.0sp"
                android:id="@id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RememberPassword" />
            <Button
                android:textStyle="bold"
                android:id="@id/connect"
                android:background="@drawable/smallbutton"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:text="@string/Connect" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>