<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout
        android:background="@android:color/white"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="664.0dip"
        android:stretchColumns="*"
        android:shrinkColumns="*">
        <TableRow
            android:layout_gravity="center"
            android:layout_marginTop="3.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textColor="#ff808080"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/General" />
            <Button
                android:textSize="13.0sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:id="@id/btnEditToggle"
                android:background="@drawable/smallbutton"
                android:layout_width="80.0dip"
                android:layout_height="31.0dip"
                android:text="@string/Edit" />
        </TableRow>
        <TableRow
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="1.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SiteLabelCOLON" />
            <EditText
                android:ellipsize="start"
                android:gravity="right"
                android:id="@id/tvSitelabel"
                android:background="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:maxWidth="50.0dip"
                android:minWidth="50.0dip"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:maxLength="30"
                android:inputType="text" />
        </TableRow>
        <TableRow
            android:id="@id/trIPPassword"
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="2.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IPPasswordCOLON" />
            <EditText
                android:ellipsize="start"
                android:gravity="right"
                android:id="@id/tvIPPassword"
                android:background="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:maxWidth="50.0dip"
                android:minWidth="50.0dip"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:maxLength="16"
                android:inputType="textPassword" />
        </TableRow>
        <TableRow
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="2.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="180.0dip"
                android:layout_height="wrap_content"
                android:text="@string/ConnectUsing"
                android:maxLines="3"
                android:singleLine="false"
                android:maxLength="35" />
            <RelativeLayout
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <Spinner
                    android:id="@id/spConnectType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </TableRow>
        <TableRow
            android:layout_marginTop="4.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textColor="#ff808080"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/DNS" />
        </TableRow>
        <TableRow
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="1.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SiteIDCOLON" />
            <EditText
                android:ellipsize="start"
                android:gravity="right"
                android:id="@id/tvSiteID"
                android:background="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:maxWidth="50.0dip"
                android:minWidth="50.0dip"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:maxLength="40"
                android:inputType="text" />
        </TableRow>
        <TableRow
            android:layout_marginTop="4.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textColor="#ff808080"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/StaticIP" />
        </TableRow>
        <TableRow
            android:gravity="center"
            android:id="@id/trLocate"
            android:background="@drawable/cell_normal"
            android:padding="1.0dip"
            android:layout_height="90.0dip"
            android:layout_marginTop="2.0dip">
            <TextView
                android:textSize="12.0sp"
                android:textColor="#ff808080"
                android:gravity="center|left"
                android:paddingLeft="12.0dip"
                android:layout_width="100.0dip"
                android:layout_height="fill_parent"
                android:text="@string/LocateIPDeviceOnNetwork"
                android:maxLines="3"
                android:singleLine="false"
                android:maxLength="45" />
            <RelativeLayout
                android:gravity="center_vertical"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip">
                <ImageView
                    android:gravity="center"
                    android:id="@id/btnLocateIP"
                    android:background="@drawable/smallbutton"
                    android:clickable="true"
                    android:layout_width="65.0dip"
                    android:layout_height="36.0dip"
                    android:src="@drawable/search"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </TableRow>
        <TableRow
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="2.0dip">
            <TextView
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_gravity="left"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IPAddress" />
            <EditText
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:textSize="12.0sp"
                android:gravity="fill"
                android:id="@id/tvIPAddress"
                android:background="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="10.0dip"
                android:minWidth="50.0dip"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:maxLength="15"
                android:digits="0123456789."
                android:inputType="numberDecimal" />
        </TableRow>
        <TableRow
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="2.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IPPortCOLON" />
            <EditText
                android:ellipsize="start"
                android:gravity="right"
                android:id="@id/tvIPPort"
                android:background="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:maxWidth="50.0dip"
                android:minWidth="50.0dip"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:maxLength="6"
                android:inputType="numberDecimal" />
        </TableRow>
        <TextView
            android:textSize="17.0sp"
            android:textColor="#ff808080"
            android:id="@id/trSMSLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SMSCallback" />
        <TableRow
            android:id="@id/trSMSPhone"
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="2.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PhoneNo" />
            <EditText
                android:ellipsize="start"
                android:gravity="right"
                android:id="@id/tvPhoneNo"
                android:background="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:maxWidth="50.0dip"
                android:maxLines="1"
                android:lines="1"
                android:ems="10"
                android:singleLine="true"
                android:maxLength="20"
                android:inputType="text">
                <requestFocus />
            </EditText>
        </TableRow>
        <TableRow
            android:id="@id/trSMSRetries"
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="2.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SMSRetriesConnection" />
            <EditText
                android:ellipsize="start"
                android:gravity="right"
                android:id="@id/tvSMSRetriesConnection"
                android:background="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:maxWidth="50.0dip"
                android:minWidth="50.0dip"
                android:maxLines="1"
                android:lines="1"
                android:ems="10"
                android:singleLine="true"
                android:maxLength="6"
                android:inputType="number" />
        </TableRow>
        <TableRow
            android:id="@id/trAlarmLabelHeader"
            android:layout_marginTop="4.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textColor="#ff808080"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/Language" />
        </TableRow>
        <TableRow
            android:id="@id/trAlarmLabelDetail"
            android:background="@drawable/cell_normal"
            android:layout_height="90.0dip"
            android:layout_marginTop="1.0dip"
            android:layout_marginBottom="10.0dip">
            <TextView
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:paddingBottom="12.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AlarmSystemLabel" />
            <Spinner
                android:layout_gravity="center_vertical"
                android:id="@id/spPanelLang"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_height="55.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="10.0dip">
            <Button
                android:textSize="17.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@id/btnCustom"
                android:background="@drawable/big_button_light_gray"
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_span="2"
                android:text="@string/Connect" />
        </TableRow>
    </TableLayout>
</ScrollView>